# inflacional

./: .gitignore  GEMINI.md  README.md  pyproject.toml  requirements.txt
.agent/rules/: remember.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
doc/: glossary.md
doc/design/: architecture.md
doc/design/adr/: 0001-api-mock-separation.md  0004-rates-lookback.md  (+3 more)
doc/user/: manual.md  onboarding.md
features/: environment_switching.feature  rates_fetching.feature
features/steps/: environment_switching_steps.py  rates_fetching_steps.py
specs/001-banxico-report/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-api-mock-separation/: spec.md
specs/003-documentation-standards/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-api-mock-separation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-banxico-api-rates/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-fix-banxico-compliance/: adr.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/banxico_report/: cli.py  generator.py
tests/features/: report_table.feature
tests/integration/: test_mock_provider.py  test_rates_mock.py
tests/mocks/: provider.py
tests/unit/: test_apa.py  test_api_fetchers.py  test_calculations.py  test_generator.py  test_generators.py  test_metadata.py  test_models.py  test_parsers.py  test_pdf_util.py  test_rule_engine.py  test_sie_client.py  test_utils.py
(+36 files in other folders)
